--- a/source/catalog.html
+++ b/source/catalog.html
@@ -33,7 +33,7 @@
 </header>
 
 <main class="main-container">
-  <h1 class="main-container">Каталог продукции</h1>
+  <h1 class="main-container__title">Каталог продукции</h1>
 
   <section class="products">
     <h2 class="visually-hidden">Товары</h2>
@@ -41,9 +41,9 @@
     <div class="products__wrapper">
       <ul class="products__list">
         <li class="products__item product-card">
-          <div class="product-card__image">
+          <a class="product-card__image" href="#">
             <img src="img/catalog/catalog-1-mobile.png" width="68" height="86" alt="Cat Energy PRO 500 г Курица">
-          </div>
+          </a>
           <a class="product-card__title-link" href="#">
             Cat Energy PRO 500 г
           </a>
@@ -79,9 +79,9 @@
 
         </li>
         <li class="products__item product-card">
-          <div class="product-card__image">
+          <a class="product-card__image" href="#">
             <img src="img/catalog/catalog-2-mobile.png" width="84" height="100" alt="Cat Energy PRO 1000 г Курица">
-          </div>
+          </a>
           <a class="product-card__title-link" href="#">
             Cat Energy PRO 500 г
           </a>
@@ -117,9 +117,9 @@
 
         </li>
         <li class="products__item product-card">
-          <div class="product-card__image">
+          <a class="product-card__image" href="#">
             <img src="img/catalog/catalog-3-mobile.png" width="68" height="78" alt="Cat Energy PRO 500 г Рыба">
-          </div>
+          </a>
           <a class="product-card__title-link" href="#">
             Cat Energy PRO 500 г
           </a>
@@ -155,9 +155,9 @@
 
         </li>
         <li class="products__item product-card">
-          <div class="product-card__image">
+          <a class="product-card__image" href="#">
             <img src="img/catalog/catalog-4-mobile.png" width="84" height="100" alt="Cat Energy PRO 1000 г Рыба">
-          </div>
+          </a>
           <a class="product-card__title-link" href="#">
             Cat Energy PRO 1000 г
           </a>
@@ -193,9 +193,9 @@
 
         </li>
         <li class="products__item product-card">
-          <div class="product-card__image">
+          <a class="product-card__image" href="#">
             <img src="img/catalog/catalog-5-mobile.png" width="68" height="78" alt="Cat Energy PRO 500 г Гречка">
-          </div>
+          </a>
           <a class="product-card__title-link" href="#">
             Cat Energy slim 500 г
           </a>
@@ -230,9 +230,9 @@
 
         </li>
         <li class="products__item product-card">
-          <div class="product-card__image">
+          <a class="product-card__image" href="#">
             <img src="img/catalog/catalog-6-mobile.png" width="84" height="100" alt="Cat Energy PRO 1000 г Гречка">
-          </div>
+          </a>
           <a class="product-card__title-link" href="#">
             Cat Energy slim 1000 г
           </a>
@@ -268,9 +268,9 @@
 
         </li>
         <li class="products__item product-card">
-          <div class="product-card__image">
+          <a class="product-card__image" href="#">
             <img src="img/catalog/catalog-7-mobile.png" width="72" height="84" alt="Cat Energy PRO 500 г Рис">
-          </div>
+          </a>
           <a class="product-card__title-link" href="#">
             Cat Energy slim 500 г
           </a>
@@ -308,7 +308,12 @@
       </ul>
 
       <div class="products__more products-show">
-        <div class="products-show__icon"></div>
+        <div class="products-show__icon">
+          <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <line x1="15" x2="15" y2="30" stroke="#D3D3D3" stroke-width="2"/>
+            <line x1="30" y1="15" y2="15" stroke="#D3D3D3" stroke-width="2"/>
+          </svg>
+        </div>
         <h3 class="products-show__title">Показать еще 100500 товаров</h3>
         <p class="products-show__description">На самом деле вкусов гораздо больше!</p>
         <a class="products-show__button" href="#">Показать все</a>
@@ -324,9 +329,9 @@
         <li class="additional-products__item additional-product">
           <div class="additional-product__wrapper">
             <h3 class="additional-product__title">Сахарозаменитель</h3>
-            <div class="additional-product__properties additional-product-properties">
-              <p class="additional-product-properties__amount">1 упаковка (100 г)</p>
-              <p class="additional-product-properties__price">200 ₽</p>
+            <div class="additional-product__properties">
+              <p class="additional-product__amount">1 упаковка (100 г)</p>
+              <p class="additional-product__price">200 ₽</p>
             </div>
           </div>
           <a class="additional-product__button" href="#">Заказать</a>
@@ -334,9 +339,9 @@
         <li class="additional-products__item additional-product">
           <div class="additional-product__wrapper">
             <h3 class="additional-product__title">питьевая вода</h3>
-            <div class="additional-product__properties additional-product-properties">
-              <p class="additional-product-properties__amount">5 литров</p>
-              <p class="additional-product-properties__price">50 ₽</p>
+            <div class="additional-product__properties">
+              <p class="additional-product__amount">5 литров</p>
+              <p class="additional-product__price">50 ₽</p>
             </div>
           </div>
           <a class="additional-product__button" href="#">Заказать</a>
@@ -344,9 +349,9 @@
         <li class="additional-products__item additional-product">
           <div class="additional-product__wrapper">
             <h3 class="additional-product__title">молоко</h3>
-            <div class="additional-product__properties additional-product-properties">
-              <p class="additional-product-properties__amount">1 литр</p>
-              <p class="additional-product-properties__price">100 ₽</p>
+            <div class="additional-product__properties">
+              <p class="additional-product__amount">1 литр</p>
+              <p class="additional-product__price">100 ₽</p>
             </div>
           </div>
           <a class="additional-product__button" href="#">Заказать</a>
@@ -354,16 +359,25 @@
         <li class="additional-products__item additional-product">
           <div class="additional-product__wrapper">
             <h3 class="additional-product__title">витамины</h3>
-            <div class="additional-product__properties additional-product-properties">
-              <p class="additional-product-properties__amount">1 упаковка (30 г)</p>
-              <p class="additional-product-properties__price">300 ₽</p>
+            <div class="additional-product__properties">
+              <p class="additional-product__amount">1 упаковка (30 г)</p>
+              <p class="additional-product__price">300 ₽</p>
             </div>
           </div>
           <a class="additional-product__button" href="#">Заказать</a>
         </li>
       </ul>
       <div class="additional-products__gift">
-        <div class="additional-products__gift-icon"></div>
+        <div class="additional-products__gift-icon">
+          <svg width="78" height="80" viewBox="0 0 78 80" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M64.0156 34.7127H14.031C12.2766 34.7127 10.8494 33.2951 10.8494 31.5524V22.0842C10.8494 20.3415 12.2766 18.9233 14.031 18.9233H64.0149C65.7687 18.9233 67.1953 20.3415 67.1953 22.0842V31.553C67.1959 33.2951 65.7693 34.7127 64.0156 34.7127ZM14.031 21.3455C13.6276 21.3455 13.2869 21.684 13.2869 22.0842V31.553C13.2869 31.9599 13.6208 32.2912 14.031 32.2912H64.0149C64.4244 32.2912 64.7578 31.9599 64.7578 31.553V22.0842C64.7578 21.6834 64.4171 21.3455 64.0149 21.3455H14.031Z" fill="white"/>
+            <path d="M57.0447 67.1488H20.999C17.6218 67.1488 14.8741 64.4191 14.8741 61.0626V33.5016C14.8741 32.8331 15.4201 32.2905 16.0929 32.2905C16.7656 32.2905 17.3116 32.8331 17.3116 33.5016V61.0626C17.3116 63.0833 18.9661 64.7267 20.999 64.7267H57.0447C59.077 64.7267 60.7308 63.0833 60.7308 61.0626V33.5016C60.7308 32.8331 61.2768 32.2905 61.9496 32.2905C62.6223 32.2905 63.1683 32.8331 63.1683 33.5016V61.0626C63.1683 64.4191 60.4213 67.1488 57.0447 67.1488Z" fill="white"/>
+            <path d="M39.0225 67.1488C38.3498 67.1488 37.8038 66.6069 37.8038 65.9378V33.5016C37.8038 32.8331 38.3498 32.2905 39.0225 32.2905C39.6953 32.2905 40.2413 32.8331 40.2413 33.5016V65.9372C40.2413 66.6069 39.6959 67.1488 39.0225 67.1488Z" fill="white"/>
+            <path d="M23.8113 21.3414C19.9966 19.2874 18.5731 14.5327 20.6383 10.7415C22.7022 6.95201 27.4864 5.53687 31.303 7.58721C37.117 10.7166 40.2565 19.4472 40.3869 19.8172L38.0877 20.6208C38.0585 20.5384 35.1256 12.3994 30.1433 9.71749C27.5078 8.30175 24.2062 9.27908 22.7821 11.8944C21.3567 14.5121 22.339 17.7941 24.9734 19.2117L23.8113 21.3414Z" fill="white"/>
+            <path d="M54.2313 21.3413L53.071 19.2111C54.3477 18.5238 55.2782 17.3848 55.6926 16.0035C56.1063 14.6217 55.9534 13.1624 55.2617 11.895C54.5719 10.6264 53.4263 9.70233 52.0363 9.29117C50.6457 8.88001 49.1783 9.0314 47.9023 9.71747C42.9201 12.3988 39.9871 20.5378 39.9579 20.6202L37.6587 19.8166C37.7891 19.4466 40.928 10.716 46.7421 7.58719C48.5897 6.5929 50.7182 6.3737 52.7316 6.96955C54.7468 7.56479 56.4061 8.90484 57.4061 10.7414C58.4073 12.5774 58.6285 14.6913 58.0289 16.6939C57.4287 18.6958 56.0801 20.3458 54.2313 21.3413Z" fill="white"/>
+            <path d="M61.9496 50.9314H16.0929C15.4201 50.9314 14.8741 50.3889 14.8741 49.7204C14.8741 49.0518 15.4201 48.5093 16.0929 48.5093H61.9496C62.6223 48.5093 63.1683 49.0518 63.1683 49.7204C63.1683 50.3889 62.6229 50.9314 61.9496 50.9314Z" fill="white"/>
+          </svg>
+        </div>
         <p class="additional-products__gift-text">Закажите все и получите чехол для кота в подарок!</p>
       </div>
     </div>
