--- a/source/index.html
+++ b/source/index.html
@@ -19,7 +19,7 @@
   </button>
   <nav class="main-nav">
     <ul class="main-nav__list site-list">
-      <li class="site-list__item site-list__item-active">
+      <li class="site-list__item site-list__item--active">
         <a class="site-list__link" href="#">Главная</a>
       </li>
       <li class="site-list__item">
@@ -88,7 +88,7 @@
     <div class="instruction__wrapper">
       <h2 class="instruction__title">Как это работает</h2>
       <ul class="instruction__list">
-        <li class="instruction__item instruction__item-one">
+        <li class="instruction__item instruction__item--one">
           <div class="instruction__icon">
             <svg width="26" height="28" viewBox="0 0 26 28" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path
@@ -100,7 +100,7 @@
             Функциональное питание содержит только полезные питательные вещества.
           </p>
         </li>
-        <li class="instruction__item instruction__item-two">
+        <li class="instruction__item instruction__item--two">
           <div class="instruction__icon">
             <svg width="26" height="29" viewBox="0 0 26 29" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path
@@ -113,7 +113,7 @@
             Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
           </p>
         </li>
-        <li class="instruction__item instruction__item-three">
+        <li class="instruction__item instruction__item--three">
           <div class="instruction__icon">
             <svg width="25" height="30" viewBox="0 0 25 30" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd"
@@ -134,7 +134,7 @@
             Замените один-два приема обычной еды на наше функциональное питание.
           </p>
         </li>
-        <li class="instruction__item instruction__item-four">
+        <li class="instruction__item instruction__item--four">
           <div class="instruction__icon">
             <svg width="26" height="31" viewBox="0 0 26 31" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path
@@ -171,11 +171,11 @@
       <p class="example__price">Затраты на питание: 15 000 РУБ. </p>
 
       <div class="example__slider">
-        <div class="example__image example__image-before">
-          <img src="img/cat-before.png" width="280" height="256" alt="">
+        <div class="example__image example__image--before">
+          <img src="img/cat-before.png" width="280" height="256" alt="Толстый кот">
         </div>
         <div class="example__image example__image-after">
-          <img src="img/cat-after.png" width="280" height="256" alt="">
+          <img src="img/cat-after.png" width="280" height="256" alt="Худой ко">
         </div>
       </div>
       <div class="example__buttons">
@@ -200,7 +200,7 @@
 
   <section class="map">
     <div class="map__wrapper">
-      <img src="img/map.jpg" width="320" height="362px" alt="">
+      <img src="img/map.jpg" width="320" height="362" alt="Карта">
     </div>
   </section>
 
