--- a/source/catalog.html
+++ b/source/catalog.html
@@ -26,7 +26,7 @@
         <a class="site-list__link" href="#">Каталог продукции</a>
       </li>
       <li class="site-list__item">
-        <a class="site-list__link" href="#">Подбор программы</a>
+        <a class="site-list__link" href="form.html">Подбор программы</a>
       </li>
     </ul>
   </nav>
